float_eq/tests/derive_tests/float_eq_attribute/float_eq_unknown_param.stderr
error: 'cheese' is not a valid float_eq derive option.
 --> $DIR/float_eq_unknown_param.rs:4:42
  |
4 | #[float_eq(ulps_tol = "MyComplex32Ulps", cheese = "Hello")]
  |                                          ^^^^^^
