float_eq/tests/derive_tests/float_eq_attribute/float_eq_unknown_param.rs
use float_eq::FloatEqUlpsTol;

#[derive(Debug, PartialEq, FloatEqUlpsTol)]
#[float_eq(ulps_tol = "MyComplex32Ulps", cheese = "Hello")]
struct MyComplex32 {
    re: f32,
    im: f32,
}

fn main() {}
